# rsomics-mantel

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  dm.rs  lib.rs
tests/: compat.rs
tests/golden/: dm1.tsv  dm2.tsv  dm2_reordered.tsv  golden.tsv
